--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout.html}">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,37 @@
 </head>
 <body>
 
-[[${board}]]
+        <!-- Content Start -->
+        <div class="content" layout:fragment="content">
+          <div class="col-12">
+            <div class="bg-light rounded h-100 p-4">
+                <h6 class="mb-4">Board List</h6>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">bno</th>
+                                <th scope="col">title</th>
+                                <th scope="col">writer</th>
+                                <th scope="col">dueDate</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="blist : ${board}">
+                                <th>[[${blist.bno}]]</th>
+                                <td>[[${blist.title}]]</td>
+                                <td>[[${blist.writer}]]</td>
+                                <td>[[${blist.dueDate}]]</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+
+      </div>
+      <!-- Content End -->
   
 </body>
 </html>
