0625 페이징 진행중

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -9,48 +9,89 @@
 </head>
 <body>
 
-        <!-- Content Start -->
-        <div class="container-fluid pt-4 px-4" layout:fragment="content">
-          <div class="col-12">
-            <div class="bg-light rounded h-100 p-4">
-                <h6 class="mb-4">Board List</h6>
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col">NO</th>
-                                <th scope="col">title</th>
-                                <th scope="col">writer</th>
-                                <th scope="col">dueDate</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="blist : ${board.list}">
-                                <th>[[${blist.bno}]]</th>
-                                <td>[[${blist.title}]]</td>
-                                <td>[[${blist.writer}]]</td>
-                                <td>[[${blist.dueDate}]]</td>
-                            </tr>
-                        </tbody>
-                    </table>
-										<div class="col-sm-12 col-xl-6">
-											<div class="bg-light rounded h-100 p-4">
-												
-													<div class="btn-toolbar" role="toolbar">
-															<div class="btn-group me-2">
-																	<button type="button" class="btn btn-primary">1</button>
-																	<button type="button" class="btn btn-primary">2</button>
-																	<button type="button" class="btn btn-primary">3</button>
-																	<button type="button" class="btn btn-primary">4</button>
-															</div>
-													</div>
+	<!-- Content Start -->
+	<div class="container-fluid pt-4 px-4" layout:fragment="content">
+		<div class="col-12">
+			<div class="bg-light rounded h-100 p-4">
+					<h6 class="mb-4">Board List</h6>
+					<div class="table-responsive">
+							<table class="table">
+									<thead>
+											<tr>
+													<th scope="col">NO</th>
+													<th scope="col">title</th>
+													<th scope="col">writer</th>
+													<th scope="col">dueDate</th>
+											</tr>
+									</thead>
+									<tbody>
+											<tr th:each="blist : ${board.list}">
+													<th>[[${blist.bno}]]</th>
+													<td>[[${blist.title}]]</td>
+													<td>[[${blist.writer}]]</td>
+													<td>[[${blist.dueDate}]]</td>
+											</tr>
+									</tbody>
+							</table>
+							<div class="col-sm-12 col-xl-6">
+									<div class="bg-light rounded h-100 p-4">
+											<div class="btn-toolbar" role="toolbar">
+														<div class="btn-group me-2 paging">
+														</div>
 											</div>
 									</div>
-                </div>    
-            </div>            
-					</div>  
-        </div>
-      <!-- Content End -->
-  
+							</div>
+					</div>    
+			</div>
+		</div>
+			<!-- <form>요소를 사용하여 GET 방식으로 데이터를 전송  
+		  action: 데이터 전송할 URL / method: HTTP 요청 메소드 지정-->
+		<form action="/board/list" method="get" class="actionForm">
+			<!-- hidden으로 숨겨서 페이지 요청에 필요한 데이터를 서버로 전송
+				thymeleaf방식으로 value 값 전달 -->
+			<input type="hidden" name="page" th:value="${pageRequestDTO.page}">
+			<input type="hidden" name="size" th:value="${pageRequestDTO.size}">
+		</form>            
+	</div>
+	<!-- Content End -->
+
+
+
+	<script layout:fragment="script" th:inline="javascript">
+
+		function makePages(page, size, total) {
+			console.log(page, size, total);
+
+			// 시작 페이지 번호
+			const startNum = (Math.ceil(page/10) * 10) - 9;
+
+			console.log("startNum: " + startNum);
+
+			// 페이징 생성 변수
+			let pagingResult = "";
+
+			// 현재 페이지가 1이 아닐 때만 이전 페이지 표시
+			startNum != 1 ? pagingResult += `<a href="${startNum - 1}" class="btn-group me-2 paging"><</a>` : "";
+		
+			// 페이징 번호 변수
+			let temp = startNum;
+
+
+			while(true) {
+				if(temp * 10 > total) {
+					break;
+				}
+
+				console.log(temp);
+
+				temp == page ? pagingResult += `<a href="${temp}" class="">${temp}</a>` : pagingResult += `<a href="${temp}" class="">${temp}</a>`;
+
+			}
+
+			const actionForm = document.querySelector(".actionForm");
+			
+		}
+	</script>
+
 </body>
 </html>
