--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout.html}">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-  <title>Document</title>
+  <title>Board</title>
 </head>
 <body>
-  <h1>read</h1>
+  
+  <!-- Form Start -->
+  <div class="container-fluid pt-4 px-4" layout:fragment="content">
+    <div class="row g-4">
+        <div class="col-sm-12 col-xl-12">
+            <div class="bg-light rounded h-100 p-4">
+                <h6 class="mb-4">READ</h6>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Title</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1"
+                            aria-describedby="emailHelp" th:value="${read.title}" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Content</label>
+                        <input type="text" class="form-control" id="exampleInputPassword1" th:value="${read.content}" readonly>
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">Writer</label>
+                      <input type="text" class="form-control" id="exampleInputPassword1" th:value="${read.writer}" readonly>
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">DATE</label>
+                      <input type="text" class="form-control" id="exampleInputPassword1" th:value="${read.dueDate}" readonly>
+                    </div>
+                    <a th:href="@{/board/list}" class="btn btn-primary m-2">LIST</a>
+                  <button type="button" class="btn btn-warning m-2">MDOFIY</button>
+                  <button type="button" class="btn btn-danger m-2">DELETE</button>
+            </div>
+        </div>
+    </div>
+  </div>
+<!-- Form End -->
+
 </body>
 </html>
