--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -8,6 +8,43 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container-fluid pt-4 px-4" layout:fragment="content">
+    <div class="row g-4">
+        <div class="col-sm-12 col-xl-6">
+            <div class="bg-light rounded h-100 p-4">
+                <h6 class="mb-4">Basic Form</h6>
+                <form name="modify" method="post" th:action="@{/board/modify/{bno}(bno=${bno})}" class="formData">
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Title</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" name="title" th:value="${modify.title}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Content</label>
+                        <input type="text" class="form-control" id="exampleInputPassword1" name="content" th:value="${modify.content}">
+                    </div>
+                    <div class="button_wrap">
+                    <button type="submit" class="btn btn-primary btnModify">MODIFY</button>
+                    <a th:href="@{/board/list}" class="btn btn-danger m-2">EXIT</a>
+                  </div>
+                </form>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <script layout:fragment="script" th:inline="javascript">
+
+    const btnModify = document.querySelector(".btnModify");
+    
+    btnModify.addEventListener("click", e => {
+
+      e.preventDefault();
+      e.stopPropagation();
+
+      modify.submit();
+
+    },false);
+
+  </script>
 </body>
 </html>
