--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -34,6 +34,14 @@
 									</tbody>
 							</table>
 							<div class="col-sm-12 col-xl-6">
+								<div class="bg-light rounded h-100 p-4">
+										<div class="btn-toolbar" role="toolbar">
+												<div class="btn-group me-2 btnPage" role="group" aria-label="First group">
+												</div>
+										</div>
+								</div>
+						</div>
+							<div class="col-sm-12 col-xl-6">
 									<div class="bg-light rounded h-100 p-4">
 											<div class="btn-toolbar" role="toolbar">
 														<div class="btn-group me-2 paging">
@@ -45,7 +53,16 @@
 					</div>    
 			</div>
 		</div>
-
+		<!--/* <form>요소를 사용하여 GET 방식으로 데이터를 전송  
+		 action: 데이터 전송할 URL / method: HTTP 요청 메소드 지정 */-->
+		<form action="/board/list" method="get" class="actionForm">
+			<!--/* hidden으로 숨겨서 페이지 요청에 필요한 데이터를 서버로 전송
+				thymeleaf방식으로 value 값 전달 */-->
+			<input type="hidden" name="page" th:value="${pageRequestDTO.page}">
+			<input type="hidden" name="size" th:value="${pageRequestDTO.size}">
+		</form>
+		<script src="/js/pageUtil.js">
+		</script>
 	</div>
 
 
@@ -55,7 +72,31 @@
 
 		const boardRead = document.querySelector(".boardRead");
 		const regist = document.querySelector(".btnRegist");
+		const actionForm = document.querySelector(".actionForm");
 
+		const pageObj = actionForm.querySelector("input[name='page']");
+		const btnPage = document.querySelector(".btnPage");
+
+		
+		// =================Pagination===========================
+		btnPage.addEventListener("click", e => {
+			e.preventDefault();
+			e.stopPropagation();
+
+			const target = e.target;
+			const pageNum = target.getAttribute("href");
+
+			pageObj.value = pageNum;
+			actionForm.setAttribute("action", `/board/list`);
+			actionForm.submit();
+		},false);
+
+		const {page, size} = [[${pageRequestDTO}]];
+		const {total} = [[${board}]];
+		const pageList = makePages(page, size, total)
+		btnPage.innerHTML = pageList;
+		
+		// =================READ===========================
 		// boardRead 변수로 read 페이지로 이동
 		boardRead.addEventListener("click", e => {
 			// e.preventDefault();
@@ -79,6 +120,8 @@
 		regist.addEventListener("click", e => {
 			window.location.href = "/board/regist";
 		})
+
+		
 
 
 	</script>
