--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -44,7 +44,7 @@
 							<div class="col-sm-12 col-xl-6">
 									<div class="bg-light rounded h-100 p-4">
 											<div class="btn-toolbar" role="toolbar">
-														<div class="btn-group me-2 paging">
+														<div class="btn-group me-2 ">
 															<button type="button" class="btn btn-warning m-2 btnRegist">Regist</button>
 														</div>
 											</div>
